Added message helper

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/sh4hids/koa-kit#readme",
   "dependencies": {
     "@koa/cors": "^2.2.2",
+    "chalk": "^2.4.1",
     "koa": "^2.6.0",
     "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.0.0",
