--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.0.0",
     "koa-logger": "^3.2.0",
+    "koa-passport": "^4.1.1",
     "koa-respond": "^2.1.0",
     "koa-router": "^7.4.0",
+    "koa-session": "^5.10.0",
     "mongoose": "^5.3.10"
   },
   "devDependencies": {
