--- a/package.json
+++ b/package.json
@@ -37,7 +37,12 @@
     "koa-respond": "^2.1.0",
     "koa-router": "^7.4.0",
     "koa-session": "^5.10.0",
-    "mongoose": "^5.3.10"
+    "mongoose": "^5.3.10",
+    "passport-facebook": "^2.1.1",
+    "passport-github2": "^0.1.11",
+    "passport-google-oauth20": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4"
   },
   "devDependencies": {
     "docz": "^0.12.5",
