--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/sh4hids/koa-kit#readme",
   "dependencies": {
     "@koa/cors": "^2.2.2",
+    "bcrypt-nodejs": "0.0.3",
     "chalk": "^2.4.1",
     "jsonwebtoken": "^8.3.0",
     "koa": "^2.6.0",
