--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "passport-facebook": "^2.1.1",
     "passport-github2": "^0.1.11",
     "passport-google-oauth20": "^1.0.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4"
   },
