--- a/package.json
+++ b/package.json
@@ -27,30 +27,31 @@
   },
   "homepage": "https://github.com/sh4hids/koa-kit#readme",
   "dependencies": {
-    "@koa/cors": "^2.2.2",
+    "@koa/cors": "^3.0.0",
     "bcrypt-nodejs": "0.0.3",
-    "chalk": "^2.4.1",
-    "cron": "^1.6.0",
-    "jsonwebtoken": "^8.3.0",
-    "koa": "^2.6.0",
+    "chalk": "^2.4.2",
+    "cron": "^1.7.0",
+    "docz-theme-default": "^1.0.4",
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
-    "koa-helmet": "^4.0.0",
+    "koa-helmet": "^4.1.0",
     "koa-jwt": "^3.5.1",
     "koa-logger": "^3.2.0",
-    "koa-passport": "^4.1.1",
+    "koa-passport": "^4.1.3",
     "koa-respond": "^2.1.0",
     "koa-router": "^7.4.0",
-    "koa-session": "^5.10.0",
-    "mongoose": "^5.3.10",
-    "passport-facebook": "^2.1.1",
+    "koa-session": "^5.10.1",
+    "mongoose": "^5.5.2",
+    "passport-facebook": "^3.0.0",
     "passport-github2": "^0.1.11",
-    "passport-google-oauth20": "^1.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4"
   },
   "devDependencies": {
-    "docz": "^0.12.5",
-    "nodemon": "^1.18.4"
+    "docz": "^1.0.4",
+    "nodemon": "^1.18.11"
   }
 }
