Update packages and restructure

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,7 @@
 {
-    "extends": "airbnb-base",
-    "rules": {
-      "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
-      "import/no-extraneous-dependencies": ["error", { "argsIgnorePattern": "chalk" }],
-      "no-console": 0,
-      "func-names": 0
-    }
+  "extends": ["airbnb", "prettier"],
+  "plugins": ["prettier"],
+  "rules": {
+    "prettier/prettier": ["error"]
+  }
 }
