--- a/package.json
+++ b/package.json
@@ -30,19 +30,20 @@
     "@koa/cors": "^3.0.0",
     "bcrypt-nodejs": "0.0.3",
     "chalk": "^2.4.2",
-    "cron": "^1.7.0",
-    "docz-theme-default": "^1.0.4",
+    "cron": "^1.7.2",
+    "docz-theme-default": "^1.2.0",
+    "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
-    "koa": "^2.7.0",
+    "koa": "^2.10.0",
     "koa-bodyparser": "^4.2.1",
-    "koa-helmet": "^4.1.0",
-    "koa-jwt": "^3.5.1",
-    "koa-logger": "^3.2.0",
+    "koa-helmet": "^5.2.0",
+    "koa-jwt": "^3.6.0",
+    "koa-logger": "^3.2.1",
     "koa-passport": "^4.1.3",
     "koa-respond": "^2.1.0",
     "koa-router": "^7.4.0",
-    "koa-session": "^5.10.1",
-    "mongoose": "^5.5.2",
+    "koa-session": "^5.12.3",
+    "mongoose": "^5.7.6",
     "passport-facebook": "^3.0.0",
     "passport-github2": "^0.1.11",
     "passport-google-oauth20": "^2.0.0",
@@ -51,8 +52,16 @@
     "passport-twitter": "^1.0.4"
   },
   "devDependencies": {
-    "docz": "^1.0.4",
-    "jest": "^24.8.0",
-    "nodemon": "^1.18.11"
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "jest": "^24.9.0",
+    "nodemon": "^1.19.4",
+    "prettier": "^1.18.2"
   }
 }
