--- a/package.json
+++ b/package.json
@@ -1,67 +1,47 @@
 {
   "name": "koa-kit",
-  "version": "0.1.0",
-  "description": "A simple koajs starter kit",
-  "main": "app.js",
-  "scripts": {
-    "start": "nodemon ./bin/server",
-    "docz:dev": "docz dev",
-    "docz:build": "docz build",
-    "test": "jest ."
+  "version": "1.0.0",
+  "description": "An example of how to structure medium-to-large sized koa apps",
+  "main": "index.js",
+  "engines": {
+    "node": "12.18.3"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sh4hids/koa-kit.git"
+  "dependencies": {
+    "@koa/cors": "^3.1.0",
+    "dotenv": "^8.2.0",
+    "koa": "^2.13.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-router": "^9.4.0",
+    "loglevel": "^1.6.8"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.10.4",
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/register": "^7.10.4",
+    "concurrently": "^5.3.0",
+    "eslint": "^7.9.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.0.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.3.0",
+    "jest": "^26.4.2",
+    "lint-staged": "^10.3.0",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.1.1",
+    "prettier-eslint-cli": "^5.0.0"
+  },
+  "scripts": {
+    "start": "node .",
+    "build": "babel --delete-dir-on-start --out-dir dist --copy-files --ignore \"**/__tests__/**,**/__mocks__/**\" --no-copy-ignored src"
   },
   "keywords": [
     "koajs",
-    "koa",
-    "nodejs",
-    "node",
-    "javascript"
+    "api",
+    "backend"
   ],
-  "author": "Shahidul Islam Majumder <hello@shahid.pro>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/sh4hids/koa-kit/issues"
-  },
-  "homepage": "https://github.com/sh4hids/koa-kit#readme",
-  "dependencies": {
-    "@koa/cors": "^3.0.0",
-    "bcrypt-nodejs": "0.0.3",
-    "chalk": "^2.4.2",
-    "cron": "^1.7.2",
-    "docz-theme-default": "^1.2.0",
-    "dotenv": "^8.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "koa": "^2.10.0",
-    "koa-bodyparser": "^4.2.1",
-    "koa-helmet": "^5.2.0",
-    "koa-jwt": "^3.6.0",
-    "koa-logger": "^3.2.1",
-    "koa-passport": "^4.1.3",
-    "koa-respond": "^2.1.0",
-    "koa-router": "^7.4.0",
-    "koa-session": "^5.12.3",
-    "mongoose": "^5.7.6",
-    "passport-facebook": "^3.0.0",
-    "passport-github2": "^0.1.11",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4"
-  },
-  "devDependencies": {
-    "eslint": "^6.5.1",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "jest": "^24.9.0",
-    "nodemon": "^1.19.4",
-    "prettier": "^1.18.2"
-  }
+  "author": "Shahidul Islam Majumder <hello@shahid.pro> (https://shahid.pro/)",
+  "license": "MIT"
 }
